--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="color-scheme" content="dark">
     <meta property="og:title" content="راهنمای فارسی لاراول">
     <meta property="og:site_name" content="راهنمای فارسی لاراول">
-    <meta property="og:url" content="https://laravelguide.ir">
+    <meta property="og:url" content="https://laravel.4mir.ir">
     <meta property="og:description" content="اولین راهنما و چیت‌شیت فارسی لاراول :)">
     <meta name="description" content="اولین راهنما و چیت‌شیت فارسی لاراول :)">
     <meta name="keyword" content=" چیت‌شیت, چیت شیت, راهنما, لاراول, laravel, laravel guide">
